--- a/Frontend-GenAI/index.html
+++ b/Frontend-GenAI/index.html
@@ -1,10 +1,14 @@
 <!doctype html>
 <html lang="en">
   <head>
+    <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet">
+
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/png" href="/BBQ_Logo.png" />
+
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Gen AI</title>
+    <title>Disha Mitra - GenAI</title>
   </head>
   <body>
     <div id="root"></div>
