--- a/Frontend-GenAI/index.html
+++ b/Frontend-GenAI/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
 
     <meta charset="UTF-8" />
     <link rel="icon" type="image/png" href="/BBQ_Logo.png" />
